# Steelmind_OS

./: .gitignore  Cargo.toml  README.md  setup.sh
bootimage/: Cargo.toml
bootimage/src/: main.rs
kernel/: Cargo.toml  build.rs
kernel/smp_trampoline/: ap.asm
kernel/src/: acpi.rs  allocator.rs  apic.rs  common_main.rs  constants.rs  interrupts.rs  loader.rs  logging.rs  macros.rs  main.rs  memory.rs  pit.rs  ram_disk.rs  serial.rs  smp.rs  terminal_out.rs  tester.rs
kernel/src/tests/: mem_test.rs  mod.rs
user_app/: Cargo.toml  x86_64-unknown-steelmind_os.json
user_app/.cargo/: config.toml
user_app/src/: main.rs  os_functions.rs  test.rs
