cargo-features = ["per-package-target"]

[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
default-target = "x86_64-unknown-none"
forced-target = "x86_64-unknown-none"

[[bin]]
name = "kernel"
test = false            
doctest = false 

[features]
default = []
# default = ["testing"]
testing = []

[dependencies]

bootloader_api = "0.11.4"
spin = {version = "0.9.8", features = ["ticket_mutex", "use_ticket_mutex"]}
noto-sans-mono-bitmap = {version = "0.2.0", features = ["all"]}
zune-jpeg = {version = "0.4.0", default-features = false}
x86_64 = {version = "0.14.11", features = ["instructions"]}
linkme = "0.3.17"
lazy_static = {version = "1.0", features = ["spin_no_std"]}
elf = {version = "0.7.3", default-features = false}
acpi = "5.0.0"
bitfield = "0.14.0"
buddy_system_allocator = "0.9.0"
log = "0.4.20"
thingbuf = { version = "0.1.4", default-features = false, features = ["alloc"] }
pruefung = { version = "0.2.1", default-features = false}